# video-whisper

./: .gitignore  README.md  pyproject.toml
examples/: video2doc.ipynb
examples/how_cuda_works/: readme.md
examples/how_cuda_works_gtc2021/: readme.md  readme_revised.md
how_cuda_works/: readme_revised.md
video2doc/: video_understanding.py  whisper.py
video_whisper/: video_understanding.py
