[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "video2doc"
version = "0.1.0"
description = ""
authors = [
    {name = "xffxff", email = "1247714429@qq.com"}
]
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools]
packages = ["video2doc"]